--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,22 @@ code {
 a {
   text-decoration: none;
 }
+#interactive video {
+  display: block;
+  margin: auto;
+  width: 100%;
+  max-width: 800px;
+}
 
 .drawingBuffer {
   display: none;
+}
+
+tr:nth-child(odd) {background: rgb(224, 224, 224)}
+tr:nth-child(even) {background: #FFF}
+
+@media (max-width: 959.95px) {
+  .MUIDataTableBodyCell-cellStacked-263 {
+    width: 85px !important;
+  }
 }
