--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,10 @@
 body {
-  margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  height: 100%;
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 a {
@@ -22,6 +16,11 @@ a {
   width: 100%;
   max-width: 800px;
 }
+div#root {
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
 
 .drawingBuffer {
   display: none;
@@ -31,7 +30,7 @@ tr:nth-child(odd) {background: rgb(224, 224, 224)}
 tr:nth-child(even) {background: #FFF}
 
 @media (max-width: 959.95px) {
-  .MUIDataTableBodyCell-cellStacked-263 {
+  [class*="MUIDataTableBodyCell-cellStacked"] {
     width: 85px !important;
   }
 }
