--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
-body {
+html, body {
   padding: 0;
-  height: 100%;
   margin: 0;
+  height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -20,6 +20,7 @@ div#root {
   background-position: center;
   background-size: cover;
   background-attachment: fixed;
+  min-height: 100%;
 }
 
 .drawingBuffer {
@@ -28,9 +29,9 @@ div#root {
 
 tr:nth-child(odd) {background: rgb(224, 224, 224)}
 tr:nth-child(even) {background: #FFF}
-
+/*
 @media (max-width: 959.95px) {
   [class*="MUIDataTableBodyCell-cellStacked"] {
     width: 85px !important;
   }
-}
+}*/
